LDEV-4023: implement password policy (front end)

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -522,5 +522,10 @@ server.config.title  =Server Configuration
 server.monitor.title  =Server Monitoring
 user.course.title=User and Course Configuration
 config.site.name =Site name
+config.password.minimum.characters=Minimum number of characters 
+config.password.uppercase=Must contain uppercase letter(s)
+config.password.lowercase=Must contain lowercase letter(s)
+config.password.numerics=Must contain at least a number
+config.password.symbols=Must contain at least one symbol(s)
 
 #======= End labels: Exported 515 labels for en AU =====
