--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -689,4 +689,15 @@ label.private.notifications.read =Read
 label.private.notifications.read.hint =Mark notification as read
 label.private.notifications.read.all.hint =Mark all notifications as read
 label.select.groups =Select groups 
+
+label.password.max.length =must be less than 25 characters
+label.password.min.length =must be at least {0} characters long
+label.password.old.must.entered =Old password must be entered
+label.password.symbols.allowed =Only these symbols are allowed
+label.password.restrictions =Password must follow the restrictions shown above
+label.password.must.contain =Password must contain
+label.password.must.ucase =at least 1 upper case letter
+label.password.must.number=at least 1 number
+label.password.must.symbol =at least 1 symbol
+
 #======= End labels: Exported 439 labels for en AU =====
