--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -689,5 +689,15 @@ label.total.activities.depend.on.path  =Total activities depend on your learning
 label.lesson.not.completed  =Lesson is not yet completed.
 label.you.completed.activities  =You have completed {0} activities
 
+label.password.max.length =must be less than 25 characters
+label.password.min.length =must be at least {0} characters long
+label.password.old.must.entered =Old password must be entered
+label.password.symbols.allowed =Only these symbols are allowed
+label.password.restrictions =Password must follow the restrictions shown above
+label.password.must.contain =Password must contain
+label.password.must.ucase =at least 1 upper case letter
+label.password.must.number=at least 1 number
+label.password.must.symbol =at least 1 symbol
+
 
 #======= End labels: Exported 439 labels for en AU =====
