--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -529,4 +529,9 @@ label.add.tool.consumer  =Add new tool consumer
 sysadmin.serversecret  =Secret
 label.tool.consumers.count  =LTI Tool Consumers(s) in total
 
+config.password.minimum.characters=Minimum number of characters 
+config.password.uppercase=Must contain uppercase letter(s)
+config.password.lowercase=Must contain lowercase letter(s)
+config.password.numerics=Must contain at least a number
+config.password.symbols=Must contain at least one symbol(s)
 #======= End labels: Exported 515 labels for en AU =====
