LDEV-4014: Tweaking the email window's appearance and behaviour in monitoring.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -699,5 +699,6 @@ label.password.must.contain =Password must contain
 label.password.must.ucase =at least 1 upper case letter
 label.password.must.number=at least 1 number
 label.password.must.symbol =at least 1 symbol
+label.email.send.me.a.copy=Send me a copy
 
 #======= End labels: Exported 439 labels for en AU =====
