LDEV-4023:Implement password policy

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -28,6 +28,8 @@ error.login.required  =Login is required.
 error.login.unique  =Login is already taken. {0}
 error.password.required  =Password is required.
 error.authorisation  =You are not authorised to do this.
+error.password.mismatch  =Your password does not match.
+error.password.empty  =Password cannot be empty.
 error.newpassword.mismatch  =Your new password does not match.
 error.oldpassword.mismatch  =Your old password is not correct.
 error.img.format  =The file you uploaded looks not an image. An image file usually has .jpg, .gif, .png or .bmp extension.
@@ -527,5 +529,15 @@ config.password.uppercase=Must contain uppercase letter(s)
 config.password.lowercase=Must contain lowercase letter(s)
 config.password.numerics=Must contain at least a number
 config.password.symbols=Must contain at least one symbol(s)
+
+label.password.max.length =must be less than 25 characters
+label.password.min.length =must be at least {0} characters long
+label.password.old.must.entered =Old password must be entered
+label.password.symbols.allowed =Only these symbols are allowed
+label.password.restrictions =Password must follow the restrictions shown above
+label.password.must.contain =Password must contain
+label.password.must.ucase =at least 1 upper case letter
+label.password.must.number=at least 1 number
+label.password.must.symbol =at least 1 symbol
 
 #======= End labels: Exported 515 labels for en AU =====
