LDEV-4017: Fixed window flicker for Add Lesson on iPad and Safari on OS/X. If the SVG file cannot be opened by Safari it ended up in a loop regenerating the file, saving it to the server and trying to load it until  the window was closed. Now it will detect that it has already tried to load and stop.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -701,4 +701,6 @@ label.password.must.number=at least 1 number
 label.password.must.symbol =at least 1 symbol
 label.email.send.me.a.copy=Send me a copy
 
+
+error.cannot.load.thumbnail=Unable to load sequence thumbnail.
 #======= End labels: Exported 439 labels for en AU =====
