LDEV-4029:Cannot force a student to change her password on login (reimplement this feature)

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -73,6 +73,7 @@ admin.user.userid  =User ID
 admin.user.login  =Login
 admin.user.password  =Password
 admin.user.password.confirm  =Confirm password
+admin.user.change.password  =Force Password Change
 admin.user.name  =Name
 admin.user.title  =Title
 admin.user.first_name  =First name
