LDEV-3902: Moving introduction edit to monitoring.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -703,4 +703,6 @@ label.email.send.me.a.copy=Send me a copy
 
 
 error.cannot.load.thumbnail=Unable to load sequence thumbnail.
+label.lesson.introduction.updated=Lesson Introduction Updated
+
 #======= End labels: Exported 439 labels for en AU =====
