--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -312,5 +312,7 @@ email.notify.students.that=Notify students that
 email.notifications.delete=Delete Notification
 email.notification.delete.alert1=About to delete the scheduled notification: {0}
 email.notification.delete.alert2=This cannot be undone. Do you want to delete?
+label.lesson.introduction=Lesson Introduction
+
 
 #======= End labels: Exported 310 labels for en AU =====
