--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -315,6 +315,6 @@ learner.group.forward.1  =Next page
 learner.group.forward.10  =10 pages forward
 learner.group.backward.1  =Previous page
 learner.group.backward.10  =10 pages back
-
+label.lesson.introduction=Lesson Introduction
 
 #======= End labels: Exported 310 labels for en AU =====
