--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -701,4 +701,5 @@ label.password.must.symbol =at least 1 symbol
 label.email.send.me.a.copy=Send me a copy
 
 error.cannot.load.thumbnail=Unable to load sequence thumbnail.
+label.lesson.introduction.updated=Lesson Introduction Updated
 #======= End labels: Exported 439 labels for en AU =====
