LDEV-3962: Updating gradebook screens to scale when window first opens and on screen resizing (apart from iPad which does not resize properly). Convert colours / layout to the bootstrap look.

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -97,6 +97,8 @@ label.max.mark  =Max mark
 label.actuals  =Actuals
 label.max  =Max
 label.overall.totals  =Overall totals
+button.help  =Help
+button.help.tooltip  =Open help page
 
 
 #======= End labels: Exported 91 labels for en AU =====
