--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -97,6 +97,8 @@ label.max.mark  =Max mark
 label.actuals  =Actuals
 label.max  =Max
 label.overall.totals  =Overall totals
+button.help  =Help
+button.help.tooltip  =Open help page
 
 
 #======= End labels: Exported 91 labels for en AU =====
