--- a/lams_tool_scribe/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scribe/conf/language/lams/ApplicationResources_en_AU.properties
@@ -94,7 +94,8 @@ button.refresh  =Refresh
 message.voteStatistics  ={0} out of {1} agree
 message.scribeInstructions  ={0}, you are the scribe for your group.
 message.learnerInstructions  =You are about to enter a group discussion and report.
-advanced.showAggregatedReports  =Show aggregated reports for all groupings.<br/>Note: this will only work when groups are assigned to this activity.
+advanced.showAggregatedReports  =Show aggregated reports for all groupings.
+advanced.showAggregatedReportsNote  =Note: this will only work when groups are assigned to this activity.
 heading.other.group.reports  =Other Groups
 message.confirmForceComplete  =Are you sure you want to Force Complete? If you click OK, you will not be able to change the Report text, and other Learners can no longer click Agree
 label.on  =On
