LDEV-4048: Adding Rate All to Star Ratings

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -61,7 +61,8 @@ label.redo  =Redo ratings
 label.rating.criterias  =Rating criteria
 label.add.criteria  =Add Criterion
 label.your.rating  =Your rating is {0}<br> Avg rating {1} out of {2} votes
-label.rate.limits.reminder  =Rating limitation: Minimum {0} and Maximum {1}.
+label.rate.limits.reminder  =Rate a minimum of {0} and a maximum of {1} users.
+label.rate.all.users  =Rate All Users
 label.rate.limits.topic.reminder  =You have rated {0} users already.
 label.rate.limits.reminder.min = You must rate at least {0} users.
 label.rate.limits.reminder.max = You can only rate up to {0} users.
