LDEV-4054 Updating English & Greek

--- a/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 13 15:08:35 CST 2016 
  
 #=================== labels for Q&A =================# 
 
@@ -22,42 +22,30 @@ label.authoring.instructions  =Instructions
 label.summary  =Summary
 label.editActivity  =Edit activity
 label.stats  =Stats
-label.authoring.qa.basic  =Please define the questions.
 label.advanced.definitions  =Advanced definitions
-radiobox.synchInMonitor  =Sync in Monitor
 radiobox.usernameVisible  =Show learner's name with answer
 radiobox.questionsSequenced  =One question per page
-label.report.title  =Report Title
 label.monitoringReport.title  =Monitoring report title
-label.offlineInstructions  =Offline Instructions
-label.onlineInstructions  =Online instructions
-instructions.type.online  =Online
-instructions.type.offline  =Offline
 link.view  =View
 link.download  =Download
 link.delete  =Delete
 button.basic  =Basic
-button.uploadFile  =Upload package
 button.preview  =Preview
 button.advanced  =Advanced
-button.instructions  =Instructions
 button.done  =Done
 tool.icon.name  =Q&A
 button.submitAllContent  =Submit
 button.getNextQuestion  =Next
 button.getPreviousQuestion  =Previous
 label.question1  =Question 1
-radiobox.defineLater  =Define in Monitor
 radiobox.showFeedback  =Show feedback
 label.upload  =Upload
-label.uploadedOfflineFiles  =Uploaded Offline Files:
-label.uploadedOnlineFiles  =Uploaded Online Files:
 label.type  =Type
 label.view  =View
 label.delete  =Delete
-feedback  =Please address the following issues before submit. <br>
-error.defaultquestion.empty  =The first question can not be empty. <br>
-submit.successful  =The content has been created successfully. <br>
+feedback  =Please address the following issues before submit.
+error.defaultquestion.empty  =The first question can not be empty.
+submit.successful  =The content has been created successfully.
 submit.unSuccessful  =Warning: An error occurred while saving the content. <br>
 error.content.inUse  =Modification of the content is not allowed since one or more learners has attempted the activity.
 label.learning.qa  =Answers for Q&A
@@ -67,13 +55,11 @@ label.answer  =Answer:
 button.endLearning  =Next activity
 label.learning.user  =User
 label.learning.attemptTime  =Date
-label.learning.timezone  =Time zone
 label.learning.response  =Response
 label.learning.report  =Learning report
 label.learning.viewOnly  =Previous responses report
 label.learner.progress  =Learner progress report
 label.preview  =Preview learner
-label.openEditor  =Open richtext editor
 label.user  =User
 label.question.col  =Question:
 label.response  =Response
@@ -87,26 +73,22 @@ label.edit  =Edit
 label.cancel  =Cancel
 label.update  =Update
 label.hide  =Hide
-label.unHide  =UnHide
+label.unHide  =Show
 label.hidden  =Hidden
 label.stats.totalLearners  =Total count of learners:
 label.stats.allGroups  =All groups:
 label.stats.totalAllGroups  =Total count of all learners:
 error.defineLater  =Please wait for the instructor to complete the contents of this activity.
-error.authoringUser.notAvailable  =Tool Activity Error! Can't continue. Tool Activity expects a user id.
 error.noLearnerActivity  =Summary report is not available since no learners attempted the activity yet.
-error.questions.duplicate  =Please correct this: The questions must be unique.
 count.total.user  =Total users:
 count.finished.user  =Finished users:
 label.topMark  =Top mark:
 label.avMark  =Average mark:
 label.loMark  =Lowest mark:
 count.max.attempt  =Maximum attempt count:
-error.monitorReportTitle  =The field "Monitor Report Title (Advanced)" is mandatory. <br>
 error.noStudentActivity  =Sorry, the report can not be generated. <br> No learner has attempted the activity yet.
 error.tab.contentId.required  =Sorry, the screen is not available. The Tool Activity requires a content id.
 error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
-error.system.qa  =A system exception has occured. Please contact technical support. The error to report is: {0}
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.allResponses  =View all responses
 label.learning.forceFinish  =You are required to finish this activity now.
@@ -133,7 +115,7 @@ label.close  =Close
 label.other.answers  =Answers from other learners
 label.learners.answers  =Learners' answers
 label.questions  =Questions
-label.add.new.question  =Create question
+label.add.new.question  =Add question
 label.edit.question  =Edit question
 label.new.question  =New question
 label.feedback  =Feedback
@@ -143,8 +125,6 @@ label.tip.deleteQuestion  =Deletes question
 label.tip.moveQuestionDown  =Moves question down
 label.tip.moveQuestionUp  =Moves question up
 questions.none.submitted  =No question(s) submitted. Please add at least one question.
-question.duplicate  =Please fix this: There are duplicate question entries.
-question.blank  =Please fix this: Question text can not be blank.
 count.finished.session  =Finished session count:
 label.feedback.seq  =Number of questions presented in this activity:
 label.feedback.combined  =Number of questions presented in this activity:
@@ -162,8 +142,6 @@ monitor.summary.th.advancedSettings  =Advanced settings
 monitor.summary.td.addNotebook  =Add a notebook at the end of Q&A
 monitor.summary.td.notebookInstructions  =Notebook instructions
 label.conditions  =Conditions
-label.authoring.heading.conditions.desc  =Please enter conditions for Q&A
-label.authoring.heading.conditions  =Conditions
 label.authoring.conditions.add.condition  =Add condition
 label.authoring.conditions.list.title  =Conditions
 label.authoring.conditions.order  =Order
@@ -187,7 +165,6 @@ textsearch.any.words  =have one or more of these words:
 textsearch.excluded.words  =have none of these unwanted words:
 textsearch.questions  =Search in these questions:
 pageTitle.admin  =Q&A Configuration
-admin.formError  =Missing values, please make sure all required fields are entered.
 admin.enableWizard  =Enable the Q&A question wizard
 admin.success  =Configuration successfully saved.
 admin.return  =Return to maintain LAMS
@@ -197,7 +174,7 @@ wizard.selectCategory  =Select category
 wizard.selectSkill  =Select cognitive skill
 wizard.selectQuestion  =Select question
 wizard.add  =Add
-wizard.addCategory  =Add Category
+wizard.addCategory  =Add category
 wizard.addSkill  =Add cognitive skill
 wizard.addQuestion  =Add question
 wizard.add.mustSelectCategory  =You must select a category before adding a cognitive skill.
@@ -225,8 +202,8 @@ wizard.import.warn  =Are you sure you want to import a new wizard? This will ove
 wizard.import.error  =Failed to import the wizard, make sure the imported file is in the expected xml format.
 wizard.editQuestion  =Edit question
 wizard.editSkill  =Edit skill
-label.allowRichEditor  =Allow rich text editor
-label.required.desc  =This question requires an answer
+label.allowRichEditor  =Allow HTML editor
+label.required.desc  =Answer required?
 label.required  =(Required)
 error.required  =You must answer Question {0}.
 label.learning.number.of.votes  ={0} / {1} votes
@@ -281,9 +258,11 @@ label.no.reedit.allowed  =No re-edit allowed
 label.search  =Search...
 label.posted.by  ={0} on {1}
 label.noredo.enabled  =Note: after answer these questions, no changes are allowed.
-label.allow.review.other.responses =Show other aswers after deadline
-label.select.leader=Select Leader
-label.question.options=Question Options
-label.activity.completion=End of Activity
-label.notifications=Notifications
-#======= End labels: Exported 280 labels for en AU =====
+label.select.leader  =Select leader
+label.question.options  =Questions options
+label.activity.completion  =End of activity
+label.notifications  =Notifications
+label.words.required  =Words required
+
+
+#======= End labels: Exported 257 labels for en AU =====
