LDEV-3785: adding label

--- a/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 13 15:08:35 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 13 15:33:29 CST 2016 
  
 #=================== labels for Q&A =================# 
 
@@ -263,6 +263,7 @@ label.question.options  =Questions options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.words.required  =Words required
+label.other.options  =Other settings
 
 
-#======= End labels: Exported 257 labels for en AU =====
+#======= End labels: Exported 258 labels for en AU =====
