--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -530,6 +530,7 @@ config.password.uppercase=Must contain uppercase letter(s)
 config.password.lowercase=Must contain lowercase letter(s)
 config.password.numerics=Must contain at least a number
 config.password.symbols=Must contain at least one symbol(s)
+config.stacktrace.error = Show detailed error
 
 label.password.max.length =must be less than 25 characters
 label.password.min.length =must be at least {0} characters long
