LDEV-4054: Updating english

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Nov 14 16:51:05 CST 2016 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -20,7 +20,7 @@ lable.job.description  =Job description
 errors.header  =<p class="warning">Please correct the following errors before proceeding:
 errors.footer  =</p>
 errors.prefix  =<br />
-error.system  =Oops! An unexpected exception thrown by the system. Contact your System Administrator.
+error.system  =Oops! An unexpected exception thrown by the system. Contact your system administrator.
 error.org.invalid  =Invalid Organisation Id. {0}
 error.orgtype.invalid  =Invalid operation for this type of organisation.
 error.name.required  =Name is required.
@@ -28,8 +28,6 @@ error.login.required  =Login is required.
 error.login.unique  =Login is already taken. {0}
 error.password.required  =Password is required.
 error.authorisation  =You are not authorised to do this.
-error.password.mismatch  =Your password does not match.
-error.password.empty  =Password cannot be empty.
 error.newpassword.mismatch  =Your new password does not match.
 error.oldpassword.mismatch  =Your old password is not correct.
 error.img.format  =The file you uploaded looks not an image. An image file usually has .jpg, .gif, .png or .bmp extension.
@@ -46,7 +44,6 @@ error.not.unique  ={0} is not unique.
 error.roles.invalid  =One or more roles are invalid.  {0}
 error.fail.add  =Failed to add user.
 error.authmethod.invalid  =Invalid authentication method. {0}
-error.theme.invalid  =Invalid theme. {0}
 error.locale.invalid  =Invalid locale. {0}
 msg.user.add.to.parent.group  =User/s marked with a '*' will be automatically added to the parent course with the same roles.
 msg.add.to.org  =User will be added to {0}.
@@ -73,7 +70,6 @@ admin.user.userid  =User ID
 admin.user.login  =Login
 admin.user.password  =Password
 admin.user.password.confirm  =Confirm password
-admin.user.change.password  =Force Password Change
 admin.user.name  =Name
 admin.user.title  =Title
 admin.user.first_name  =First name
@@ -167,7 +163,6 @@ sysadmin.login.text  =Update the text under the logo on the login page:
 sysadmin.headline  =System Administration
 sysadmin.config.settings.edit  =Edit configuration settings
 sysadmin.batch.temp.file.delete  =Delete old temporary files
-sysadmin.batch.preview.lesson.delete =Delete old preview lessons
 sysadmin.job.list  =Job list
 sysadmin.list.job  =List scheduled jobs in Quartz queue
 sysadmin.register.server  =Register server
@@ -232,10 +227,6 @@ msg.importv1.created  =Created {0} users and {1} courses.
 msg.importv1.already.exist  =The following logins already exist
 msg.cleanup.files.deleted  ={0} files were deleted.
 msg.cleanup.warning  =Warning: calculating the size of LAMS' temporary files may incur a performance hit on your server if it hasn't been cleaned out for a while.
-msg.cleanup.preview.lesson.confirm =Are you sure you want to delete all preview lessons?
-msg.cleanup.preview.lesson.error =Error while deleting preview lessons
-label.cleanup.preview.lesson.count =Number of preview/all lessons:
-label.cleanup.preview.lesson.progress =Deleting...
 label.exported.learning.designs  =exported learning designs
 label.imported.learning.designs  =imported learning designs
 label.unknown  =unknown
@@ -308,7 +299,6 @@ config.xmpp.domain  =Chat server domain
 config.xmpp.conference  =Chat server conference
 config.xmpp.admin  =Chat server admin username
 config.xmpp.password  =Chat server admin password
-config.default.theme  =Default theme
 config.allow.direct.lesson.launch  =Allow direct lesson launch
 config.community.enable  =Enable LAMS community
 config.allow.live.edit  =Allow Live Edit
@@ -414,7 +404,6 @@ admin.themes.makeThemeDefault  =Make this theme the server default
 admin.themes.makeDefault  =Make default
 admin.themes.deleteConfirm  =Are you sure you want to delete this theme?
 admin.themes.nameAlreadyExists  =Please enter a new unused theme name, or click the edit icon to edit.
-label.theme  =Theme
 config.use.internal.smtp.server  =Use internal SMTP server
 label.email  =Email
 title.clone.lessons  =Clone lessons
@@ -521,25 +510,42 @@ tool.groups.group.name.error  =A group name can not be blank
 tool.groups.save.error  =Error while saving groups
 config.live.edit  =Enable live edit
 sysadmin.extGroupsUrl  =External groups URL
-server.config.title  =Server Configuration
-server.monitor.title  =Server Monitoring
-user.course.title=User and Course Configuration
-config.site.name =Site name
-config.password.minimum.characters=Minimum number of characters 
-config.password.uppercase=Must contain uppercase letter(s)
-config.password.lowercase=Must contain lowercase letter(s)
-config.password.numerics=Must contain at least a number
-config.password.symbols=Must contain at least one symbol(s)
-config.stacktrace.error = Show detailed error
+server.config.title  =Server configuration
+server.monitor.title  =Server monitoring
+user.course.title  =User and course configuration
+config.site.name  =Site name
+label.create.lesson  =Create new lesson
+label.manage.tool.consumers  =Maintain LTI Tool Consumers
+label.edit.tool.consumer  =Edit tool consumer details
+label.add.tool.consumer  =Add new tool consumer
+sysadmin.serversecret  =Secret
+label.tool.consumers.count  =LTI Tool Consumers(s) in total
+config.stacktrace.error  =Show full error message (stack trace)
+config.password.minimum.characters  =Minimum number of characters
+config.password.uppercase  =Must contain uppercase letter(s)
+config.password.lowercase  =Must contain lowercase letter(s)
+config.header.password.policy  =Password policy
+config.password.numerics  =Must contain at least a number
+config.password.symbols  =Must contain at least one symbol(s)
+error.password.mismatch  =Your passwords does not match.
+error.password.empty  =Password cannot be empty.
+admin.user.change.password  =Force password change
+label.password.max.length  =must be less than 25 characters
+label.password.min.length  =must be at least {0} characters long
+label.password.old.must.entered  =Old password must be entered
+label.password.symbols.allowed  =Only these symbols are allowed
+label.password.restrictions  =Password must follow the restrictions shown above
+label.password.must.contain  =Password must contain
+label.password.must.ucase  =at least 1 upper case letter
+label.password.must.number  =at least 1 number
+label.password.must.symbol  =at least 1 symbol
+sysadmin.batch.preview.lesson.delete  =Delete old preview lessons
+msg.cleanup.preview.lesson.confirm  =Are you sure you want to delete all preview lessons?
+msg.cleanup.preview.lesson.error  =Error while deleting preview lessons
+label.cleanup.preview.lesson.count  =Number of preview/all lessons:
+label.cleanup.preview.lesson.progress  =Deleting...
+error.theme.invalid  =Invalid theme
+label.theme  =Theme
 
-label.password.max.length =must be less than 25 characters
-label.password.min.length =must be at least {0} characters long
-label.password.old.must.entered =Old password must be entered
-label.password.symbols.allowed =Only these symbols are allowed
-label.password.restrictions =Password must follow the restrictions shown above
-label.password.must.contain =Password must contain
-label.password.must.ucase =at least 1 upper case letter
-label.password.must.number=at least 1 number
-label.password.must.symbol =at least 1 symbol
 
-#======= End labels: Exported 515 labels for en AU =====
+#======= End labels: Exported 540 labels for en AU =====
