--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Nov 14 16:51:05 CST 2016 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -20,7 +20,7 @@ lable.job.description  =Job description
 errors.header  =<p class="warning">Please correct the following errors before proceeding:
 errors.footer  =</p>
 errors.prefix  =<br />
-error.system  =Oops! An unexpected exception thrown by the system. Contact your System Administrator.
+error.system  =Oops! An unexpected exception thrown by the system. Contact your system administrator.
 error.org.invalid  =Invalid Organisation Id. {0}
 error.orgtype.invalid  =Invalid operation for this type of organisation.
 error.name.required  =Name is required.
@@ -44,8 +44,6 @@ error.not.unique  ={0} is not unique.
 error.roles.invalid  =One or more roles are invalid.  {0}
 error.fail.add  =Failed to add user.
 error.authmethod.invalid  =Invalid authentication method. {0}
-error.flash.theme.invalid  =Invalid flash theme. {0}
-error.html.theme.invalid  =Invalid html theme. {0}
 error.locale.invalid  =Invalid locale. {0}
 msg.user.add.to.parent.group  =User/s marked with a '*' will be automatically added to the parent course with the same roles.
 msg.add.to.org  =User will be added to {0}.
@@ -277,7 +275,6 @@ config.server.url  =Server URL
 config.server.url.context.path  =Server URL context path
 config.version  =Version
 config.temp.dir  =Temporary files directory
-config.dump.dir  =Flash dump files directory
 config.ear.dir  =EAR directory
 config.smtp.server  =SMTP server
 config.lams.support.email  =LAMS support email
@@ -302,8 +299,6 @@ config.xmpp.domain  =Chat server domain
 config.xmpp.conference  =Chat server conference
 config.xmpp.admin  =Chat server admin username
 config.xmpp.password  =Chat server admin password
-config.default.flash.theme  =Default flash theme
-config.default.html.theme  =Default HTML theme
 config.allow.direct.lesson.launch  =Allow direct lesson launch
 config.community.enable  =Enable LAMS community
 config.allow.live.edit  =Allow Live Edit
@@ -409,11 +404,6 @@ admin.themes.makeThemeDefault  =Make this theme the server default
 admin.themes.makeDefault  =Make default
 admin.themes.deleteConfirm  =Are you sure you want to delete this theme?
 admin.themes.nameAlreadyExists  =Please enter a new unused theme name, or click the edit icon to edit.
-admin.themes.type  =Type
-admin.themes.html  =HTML
-admin.themes.flash  =Flash
-label.html.htmlTheme  =HTML theme
-label.html.flashTheme  =Flash theme
 config.use.internal.smtp.server  =Use internal SMTP server
 label.email  =Email
 title.clone.lessons  =Clone lessons
@@ -449,7 +439,6 @@ admin.timezone.display.name  =Display name
 admin.user.enable.flash.for.learner.window  =Enable Flash for learner window
 admin.user.time.zone  =Time Zone
 config.show.all.my.lesson.link  =Show "All My Lessons" link in User's profile
-config.force.mobile.use.flashlesh  =Force mobile devices to use learner interface without Flash
 config.display.print.button  =Display a print button when the lesson is completed
 sysadmin.lessonFinishUrl  =Lesson finish callback URL
 admin.servertimezone.server.timezone.management  =Server timezone management
@@ -520,18 +509,43 @@ tool.groups.remove.confirm  =Are you sure you want to remove this group?
 tool.groups.group.name.error  =A group name can not be blank
 tool.groups.save.error  =Error while saving groups
 config.live.edit  =Enable live edit
-config.export.portfolio  =Enable export portfolio
-
+sysadmin.extGroupsUrl  =External groups URL
+server.config.title  =Server configuration
+server.monitor.title  =Server monitoring
+user.course.title  =User and course configuration
+config.site.name  =Site name
 label.create.lesson  =Create new lesson
 label.manage.tool.consumers  =Maintain LTI Tool Consumers
 label.edit.tool.consumer  =Edit tool consumer details
 label.add.tool.consumer  =Add new tool consumer
 sysadmin.serversecret  =Secret
 label.tool.consumers.count  =LTI Tool Consumers(s) in total
+config.stacktrace.error  =Show full error message (stack trace)
+config.password.minimum.characters  =Minimum number of characters
+config.password.uppercase  =Must contain uppercase letter(s)
+config.password.lowercase  =Must contain lowercase letter(s)
+config.header.password.policy  =Password policy
+config.password.numerics  =Must contain at least a number
+config.password.symbols  =Must contain at least one symbol(s)
+error.password.mismatch  =Your passwords does not match.
+error.password.empty  =Password cannot be empty.
+admin.user.change.password  =Force password change
+label.password.max.length  =must be less than 25 characters
+label.password.min.length  =must be at least {0} characters long
+label.password.old.must.entered  =Old password must be entered
+label.password.symbols.allowed  =Only these symbols are allowed
+label.password.restrictions  =Password must follow the restrictions shown above
+label.password.must.contain  =Password must contain
+label.password.must.ucase  =at least 1 upper case letter
+label.password.must.number  =at least 1 number
+label.password.must.symbol  =at least 1 symbol
+sysadmin.batch.preview.lesson.delete  =Delete old preview lessons
+msg.cleanup.preview.lesson.confirm  =Are you sure you want to delete all preview lessons?
+msg.cleanup.preview.lesson.error  =Error while deleting preview lessons
+label.cleanup.preview.lesson.count  =Number of preview/all lessons:
+label.cleanup.preview.lesson.progress  =Deleting...
+error.theme.invalid  =Invalid theme
+label.theme  =Theme
 
-config.password.minimum.characters=Minimum number of characters 
-config.password.uppercase=Must contain uppercase letter(s)
-config.password.lowercase=Must contain lowercase letter(s)
-config.password.numerics=Must contain at least a number
-config.password.symbols=Must contain at least one symbol(s)
-#======= End labels: Exported 515 labels for en AU =====
+
+#======= End labels: Exported 540 labels for en AU =====
