LDEV-4059: improve overall usability, file uploads and validation

--- a/lams_tool_images/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources.properties
@@ -169,5 +169,6 @@ label.submit  =Finish
 label.image.options=Image Options
 label.activity.completion=End of Activity
 label.posted.by  ={0} on {1}
+errors.maxfilesize = Image exceeds the max file size
 
 #======= End labels: Exported 161 labels for en AU =====
