--- a/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 17 11:48:03 CST 2016 
  
 #=================== labels for Image Gallery =================# 
 
@@ -20,12 +20,12 @@ label.authoring.heading.basic  =Basic
 label.authoring.heading.basic.desc  =Basic input information for image gallery
 label.authoring.heading.advance.desc  =Please input advance options for image gallery
 label.authoring.basic.title  =Title
-label.authoring.basic.add.image  =Add Image
-label.authoring.basic.add.images  =Add Images
-label.authoring.basic.add.multiple.images  =Add Multiple Images
+label.authoring.basic.add.image  =Add image
+label.authoring.basic.add.images  =Add images
+label.authoring.basic.add.multiple.images  =Add multiple images
 label.authoring.basic.upload.multiple.images  =Upload multiple images
 label.authoring.basic.upload.single.image  =Upload single image
-label.authoring.basic.image.list  =Image List
+label.authoring.basic.image.list  =Images
 label.authoring.basic.resource.edit  =Edit
 label.authoring.basic.resource.delete  =Delete
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Image Gallery with the following instructions:
@@ -36,12 +36,12 @@ label.authoring.basic.resource.description.input  =Description
 label.authoring.advance.allow.learner.share.images  =Allow learners to share their own images
 label.authoring.advance.allow.learner.comment.images  =Allow learners to comment on images
 label.authoring.advance.notify.monitoring.teachers  =Notify instructors when a learner submits an image
-label.authoring.advance.allow.learner.ratings.or.vote  =Enable Feedback
+label.authoring.advance.allow.learner.ratings.or.vote  =Enable feedback
 label.authoring.advance.allow.learner.vote  =Allow learners to select favorite images
 label.authoring.advance.allow.learner.rank  =Allow learners to give a rank to images
 label.authoring.cancel.button  =Cancel
-label.authoring.up  =Move Up
-label.authoring.down  =Move down
+label.authoring.up  =Up
+label.authoring.down  =Down
 label.authoring.image  =Image
 authoring.exception  =There is a problem in image gallery authoring page, the reason is {0}
 authoring.msg.cancel.save  =Do you want to close this window without saving?
@@ -62,14 +62,14 @@ label.learning.added.by  =Added by:
 label.learning.open.original.size  =Open original size
 monitoring.tab.summary  =Summary
 monitoring.tab.statistics  =Statistic
-monitoring.tab.edit.activity  =Edit Activity
+monitoring.tab.edit.activity  =Edit activity
 monitoring.label.group  =Group
 monitoring.summary.note  =Note: number of learners indicates the learners who have viewed the resource.
 monitoring.label.title  =Title
-monitoring.label.suggest  =Suggested By
+monitoring.label.suggest  =Suggested by
 monitoring.label.hide  =Hide
 monitoring.label.show  =Show
-monitoring.label.user.loginname  =Login name
+monitoring.label.user.loginname  =Login
 monitoring.label.user.name  =Name
 label.monitoring.title  =Image Gallery - Monitor
 label.monitoring.number.rated  =Number of rated
@@ -77,17 +77,17 @@ label.monitoring.average.rating  =Average rating
 label.monitoring.number.votes  =Number of favourites
 label.monitoring.by  =By
 label.monitoring.edit.activity.edit  =Edit
-label.monitoring.summary.overall.summary  =Overall Summary
-label.monitoring.summary.title.reflection  =Notebook Entry
+label.monitoring.summary.overall.summary  =Summary
+label.monitoring.summary.title.reflection  =Notebook entry
 label.monitoring.summary.add.new.image  =Add new image
-label.monitoring.imagesummary.image.summary  =Image Summary
+label.monitoring.imagesummary.image.summary  =Image summary
 label.monitoring.imagesummary.save  =Save
 label.monitoring.imagesummary.user  =Learner
 label.monitoring.imagesummary.comments  =Comments
 label.monitoring.imagesummary.rating  =Rating
 label.monitoring.imagesummary.voted.for.this.image  =Favourites for this image?
 label.monitoring.imagesummary.image  =Image
-label.monitoring.updatecomment.update.comment  =Update Comment
+label.monitoring.updatecomment.update.comment  =Update comment
 label.monitoring.updatecomment.comment  =Comment
 label.monitoring.updatecomment.save  =Save
 label.monitoring.updatecomment.posted.by  =Posted by
@@ -95,7 +95,7 @@ label.monitoring.updatecomment.posted.on  =Posted on
 label.export.uploaded.by  =Uploaded by
 label.export.voted.for.this.image  =Favorite image
 label.export.images  =Images
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
+message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 output.desc.learner.number.of.images.uploaded  =Number of images uploaded by user
 output.desc.learner.number.of.comments  =Number of comments posted by user
 output.desc.learner.number.of.votes  =Number of images selected as favorite by user
@@ -121,7 +121,7 @@ warning.msg.monitoring.do.you.want.to.delete  =Do you really want to delete this
 label.delete  =Delete
 label.view  =View
 label.edit  =Edit
-message.monitoring.summary.no.session  =No Session Available
+message.monitoring.summary.no.session  =Learners have not reached this activity yet
 label.show  =Show
 label.hide  =Hide
 label.cancel  =Cancel
@@ -140,20 +140,20 @@ label.authoring.heading.advance  =Advanced
 label.continue  =Continue
 monitoring.user.fullname  =Name
 button.close  =Close
-label.monitoring.heading.access  =Learners list
+label.monitoring.heading.access  =Learners
 label.finished  =Next Activity
 label.finish  =Finished
 error.msg.repository  =A repository error occurred while trying to upload the file.
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.activityLocked  =The instructor has set this activity not to allow you to view or share any more resources after you have finished it.
-label.export.reflection  =Notebook Entries
+label.export.reflection  =Notebook entries
 message.warnLockOnFinish  =Note: After you click on Next Activity, if you come back to this Image Gallery, you will not be able to share new resources.
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
 monitor.summary.td.addNotebook  =Add a notebook at end of Image Gallery
 monitor.summary.td.notebookInstructions  =Notebook instructions
-admin.page.title  =Image Gallery Settings
+admin.page.title  =Image Gallery settings
 error.required.fields.missing  =Missing values, please make sure all required fields are entered.
 error.entered.values.not.integers  =Entered values should be integers
 admin.maximum.dimensions.medium.image  =Maximum dimensions of medium image
@@ -167,22 +167,10 @@ event.imagesubmit.body  =The learner {0} submitted an image in a image gallery t
 output.desc.uploaded.images.urls  =Image Gallery: images uploaded by learners
 label.learning.delete.image  =Delete image
 label.submit  =Finish
-
-label.rating.criterias  =Rating criterias
-label.add.criteria  =Add Criteria
-label.your.rating  =Your rating is {0}<br> Avg rating {1} out of {2} votes
-label.average.rating  =Average rating {0}/{1} votes
-label.rate.limits.reminder  =Rating limitation: Minimum {0} and Maximum {1}.
-label.rate.limits.topic.reminder  =You have rated {0} images already.
-label.rate.limits.reminder.min = You must rate at least {0} images.
-label.rate.limits.reminder.max = You can only rate up to {0} images.
-js.warning.max.min.limit = There is an error with the minimum and/or maximum set for ratings. Please check and try again. 
-label.minimum  =Minimum:
-label.maximum  =Maximum:
-label.no.minimum  =No minimum
-label.no.maximum  =No maximum
-label.minimum.number.words  =Minimum number of words in a comment {0}
-warning.minimum.number.words  =There is a minimum required number of words in a comment: {0}. So far you've entered {1} word(s).
-label.comment.textarea.tip  =Please, provide some comment here...
 label.posted.by  ={0} on {1}
-#======= End labels: Exported 161 labels for en AU =====
+label.image.options  =Image options
+label.activity.completion  =End of activity
+errors.maxfilesize  =Image exceeds maximum file size
+
+
+#======= End labels: Exported 165 labels for en AU =====
