--- a/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,17 +2,13 @@ appName = images
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 17 11:47:58 CST 2016 
  
 #=================== labels for Image Gallery =================# 
 
 appName  =Galer\u00eda de Im\u00e1genes
 activity.description  =Una galer\u00eda de images para compartir entre estudiantes.
-label.authoring.heading.instructions  =Intrucciones
-label.authoring.heading.instructions.desc  =Ingrese informaci\u00f3n para modos online y offline.
 label.authoring.basic.instruction  =Instrucciones
-label.authoring.online.instruction  =Intrucciones Modo Online:
-label.authoring.offline.instruction  =Intrucciones Modo Offline:
 activity.helptext  =Subiendo las im\u00e1genes para compartir.
 tool.display.name  =Galer\u00eda de Im\u00e1genes
 tool.description  =Herramienta para compartir im\u00e1genes
@@ -37,13 +33,6 @@ label.authoring.basic.resource.title.input  =T\u00edtulo
 label.authoring.basic.resource.file.input  =Archivo
 label.authoring.basic.resource.files.input  =Archivos
 label.authoring.basic.resource.description.input  =Descripci\u00f3n
-label.authoring.online.file  =Archivos modo online
-label.authoring.offline.file  =Archivos modo offline
-label.authoring.choosefile.button  =Seleccione archivo
-label.authoring.upload.online.button  =Subir
-label.authoring.upload.offline.button  =Subir
-label.authoring.online.delete  =Borrar
-label.authoring.offline.delete  =Borrar
 label.authoring.advance.allow.learner.share.images  =Permitir a los estudiantes compartir sus im\u00e1genes
 label.authoring.advance.allow.learner.comment.images  =Permitir a los estudiantes hacer comentarios sobre las im\u00e1genes
 label.authoring.advance.notify.monitoring.teachers  =Notificar a los intructores cuando una im\u00e1gen es agregada
@@ -72,7 +61,6 @@ label.learning.comments  =Com
 label.learning.added.by  =A\u00f1adido por:
 label.learning.open.original.size  =Abrir en tama\u00f1o original
 monitoring.tab.summary  =Sumario
-monitoring.tab.instructions  =Instrucci\u00f3
 monitoring.tab.statistics  =Instrucciones
 monitoring.tab.edit.activity  =Editar Actividad
 monitoring.label.group  =Grupo
@@ -131,7 +119,6 @@ error.msg.default.content.not.find  =No se pudo recuperar el contenido por defec
 warning.msg.authoring.do.you.want.to.delete  =\u00bfEst\u00e1 seguro que desea borrar esta im\u00e1gen?
 warning.msg.monitoring.do.you.want.to.delete  =\u00bfEst\u00e1 seguro que desea eliminar este comentario?
 label.delete  =Borrar
-label.download  =Descargar
 label.view  =Ver
 label.edit  =Editar
 message.monitoring.summary.no.session  =No hay sessiones disponibles.
@@ -139,7 +126,6 @@ label.show  =Mostrar
 label.hide  =Esconder
 label.cancel  =Cancelar
 define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-run.offline.message  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
 message.monitoring.summary.no.resource.for.group  =No hay imagenes disponibles en este grupo
 button.try.again  =Intentar nuevamente
 page.title.monitoring.view.reflection  =Ver Reflexiones
@@ -159,7 +145,6 @@ label.finished  =Finalizar
 label.finish  =Finalizado
 error.msg.repository  =A ocurrido un error en el repositorio al tratar de incluir un archivo.
 message.alertContentEdit  =Advertencia: Uno o mas estudiantes han accedido a esta actividad. Cambiar el contenido de la misma puede resultar en que los estudiantes reciban diferente informaci\u00f3n sobre esta actividad.
-monitoring.label.attachments  =Archivos adjuntos
 message.activityLocked  =El instructor ha configurado esta actividad de manera que no permita subir m\u00e1s imagenes una vez finalizada.
 label.export.reflection  =Reflexiones
 message.warnLockOnFinish  =Atenci\u00f3n: una vez finalizada esta actividad no podr\u00e1 hacer cambios.
@@ -182,6 +167,10 @@ event.imagesubmit.body  =El estudiante {0} ha enviado una im\u00e1gen. \n\n Este
 output.desc.uploaded.images.urls  =Galer\u00eda de Imagenes: imagenes subidas por estudiantes
 label.learning.delete.image  =Eliminar imagen
 label.submit  =Finalizar
+label.posted.by  ={0} el {1}
+label.image.options  =Opciones
+label.activity.completion  =Al finalizar actividad
+errors.maxfilesize  =La imagen excede el tama\u00f1o m\u00e1ximo permitido
 
 
-#======= End labels: Exported 176 labels for es ES =====
+#======= End labels: Exported 165 labels for es ES =====
