LDEV-4061: Add overall completion chart in monitoring UI. Update d3.js to 3.x latest. Version 4 is not backwards compatible. Allow legend on hover instead of a static one next to the chart.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -247,6 +247,10 @@ lesson.state.action.remove  =Remove
 lesson.state.action.archive  =Archive
 error.lesson.schedule.date  =No date was selected. Please select a date and time.
 lesson.group.dialog.class  =Class
+lesson.chart.title =Overall completion
+lesson.chart.started =Started
+lesson.chart.not.started =Not started
+lesson.chart.completed =Completed
 label.learner.progress.activity.current.tooltip  =This is the current activity
 label.learner.progress.activity.completed.tooltip  =Double click to review this completed activity
 label.learner.progress.activity.attempted.tooltip  =The learner has attempted but not yet finished this activity
