LDEV-4054: updating English and Spanish

--- a/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Nov 19 02:41:05 CST 2016 
  
 #=================== labels for Gradebook =================# 
 
@@ -97,6 +97,13 @@ label.max.mark  =Resultado m\u00e1ximo
 label.actuals  =Real
 label.max  =M\u00e1ximo
 label.overall.totals  =Totales generales
+audit.lesson.change.mark  =Marca cambiada para el usuario {0}. LessonId: {1}. nota original: {2}, nota nueva: {3}
+audit.activity.change.mark  =Marca cambiada para el usuario {0}. LessonId: {1}. ActivityId: {2}. nota original: {3}, nota nueva: {4}
+audit.marks.released.on  =Los resultados se han compartidos con los estudiantes para lessonId {0}.
+audit.marks.released.off  =Los resultados han sido ocultos para lessonId {0}.
+gradebook.export.login  =Usuario
+button.help  =Ayuda
+button.help.tooltip  =Abrir ayuda
 
 
-#======= End labels: Exported 91 labels for es ES =====
+#======= End labels: Exported 98 labels for es ES =====
