--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Nov 19 02:40:33 CST 2016 
  
 #=================== labels for Gradebook =================# 
 
@@ -10,34 +10,34 @@ heading.general.error  =Error
 error.authorisation  =You are not authorised to do this.
 error.general.1  =Sorry, there has been an error.
 error.general.2  =There is a problem processing this request. Close the browser window and try again.
-error.general.3  =If the problem persists please contact your system administrator or the technical forums on LAMS Community.
-gradebook.title.window.lessonMonitor  =Gradebook Lesson Monitor
-gradebook.title.window.courseMonitor  =Gradebook Course Monitor
+error.general.3  =If the problem persists please contact your system administrator.
+gradebook.title.window.lessonMonitor  =Gradebook
+gradebook.title.window.courseMonitor  =Gradebook course monitor
 gradebook.title.window.myGradebook  =My Gradebook
-gradebook.title.courseMonitor  =Course Gradebook for {0}
-gradebook.title.lessonGradebook  =Lesson Gradebook for {0}
+gradebook.title.courseMonitor  =Course gradebook for {0}
+gradebook.title.lessonGradebook  =Gradebook for {0} lesson
 gradebook.title.myGradebook  =Gradebook for {0}
-gradebook.gridtitle.usergrid  =Learner Lesson View
-gradebook.gridtitle.activitygrid  =Activity View
+gradebook.gridtitle.usergrid  =Grades by learner
+gradebook.gridtitle.activitygrid  =Grades by activity
 gradebook.columntitle.name  =Name
 gradebook.columntitle.progress  =Progress
-gradebook.columntitle.timeTaken  =Time Taken
-gradebook.columntitle.lessonFeedback  =Lesson Feedback
-gradebook.columntitle.lessonName  =Lesson Name
+gradebook.columntitle.timeTaken  =Time taken
+gradebook.columntitle.lessonFeedback  =Lesson feedback
+gradebook.columntitle.lessonName  =Lesson
 gradebook.columntitle.subGroup  =Subgroup
-gradebook.columntitle.startDate  =Start Date
-gradebook.columntitle.completeDate  =Complete Date
+gradebook.columntitle.startDate  =Start date
+gradebook.columntitle.completeDate  =Complete date
 gradebook.columntitle.mark  =Mark
 gradebook.columntitle.activity  =Activity
-gradebook.columntitle.activityFeedback  =Activity Feedback
-gradebook.columntitle.outputs  =Tool Outputs
+gradebook.columntitle.activityFeedback  =Activity feedback
+gradebook.columntitle.outputs  =Tool outputs
 gradebook.columntitle.competences  =Competencies
-gradebook.columntitle.averageTimeTaken  =Average Time Taken
-gradebook.columntitle.averageMark  =Average Mark
-gradebook.columntitle.learnerName  =Learner Name
-gradebook.function.window.showColumns  =Show/Hide Columns
+gradebook.columntitle.averageTimeTaken  =Median time taken:
+gradebook.columntitle.averageMark  =Average mark
+gradebook.columntitle.learnerName  =Name
+gradebook.function.window.showColumns  =Show/Hide columns
 gradebook.function.error.enterNumber  =Please enter a number value
-gradebook.function.search.title  =Search Grid
+gradebook.function.search.title  =Search grid
 gradebook.function.search.contains  =contains
 gradebook.function.search.endsWith  =ends with
 gradebook.function.search.startsWith  =starts with
@@ -50,7 +50,7 @@ label.find  =Find
 label.reset  =Reset
 gradebook.monitor.releasemarks.1  =Release
 gradebook.monitor.releasemarks.2  =Hide
-gradebook.monitor.releasemarks.3  =marks for this lesson.
+gradebook.monitor.releasemarks.3  =marks to learners
 gradebook.monitor.releasemarks.check  =Are you sure you want to release marks for this lesson to learners?
 gradebook.monitor.releasemarks.check2  =Are you sure you want to hide marks from learners for this lesson?
 error.releasemarks.fail  =Mark release failed, please contact your system administrator.
@@ -58,26 +58,26 @@ error.markhigher  =Mark must be lower than maximum mark.
 error.cellsave  =Problem saving cell content, please contact your system administrator.
 label.error  =Error
 gradebook.export.excel.1  =Export
-gradebook.export.excel.2  =grades to spreadsheet file.
+gradebook.export.excel.2  =grades
 gradebook.export.activity  =Activity
 gradebook.export.activities  =Activities
 gradebook.export.outputs  =Outputs
-gradebook.export.average.lesson.mark  =Average lesson mark:
+gradebook.export.average.lesson.mark  =Median lesson mark:
 gradebook.export.average.lesson.time.taken  =Average time taken for lesson:
-gradebook.export.total.marks.for.lesson  =Total Marks for Lesson
-gradebook.export.total.mark  =Total Mark
+gradebook.export.total.marks.for.lesson  =Total marks for lesson
+gradebook.export.total.mark  =Total mark
 gradebook.export.dateheader  =Exported on:
-gradebook.export.lesson.summary  =Lesson Summary
-gradebook.export.learner.view  =Learner View
-gradebook.export.time.taken.seconds  =Time Taken (seconds)
-gradebook.export.average.time.taken.seconds  =Average Time Taken (seconds)
+gradebook.export.lesson.summary  =Lesson summary
+gradebook.export.learner.view  =Learner view
+gradebook.export.time.taken.seconds  =Time taken (seconds)
+gradebook.export.average.time.taken.seconds  =Median time taken (seconds)
 gradebook.export.user  =User
 gradebook.exportcourse.course.summary  =Course summary
-gradebook.exportcourse.lessonFeedback  =Lesson Feedback
+gradebook.exportcourse.lessonFeedback  =Lesson feedback
 gradebook.exportcourse.mark  =Mark
 gradebook.exportcourse.lesson  =Lesson: {0}
 gradebook.exportcourse.progress  =Progress
-gradebook.exportcourse.learner.name  =Learner Name
+gradebook.exportcourse.learner.name  =Name
 gradebook.exportcourse.ok  =Completed
 gradebook.exportcourse.attempted  =Attempted
 gradebook.export.last.name  =Last name
@@ -85,7 +85,7 @@ gradebook.export.first.name  =First name
 gradebook.coursemonitor.wait  =Please wait...
 gradebook.exportcourse.current.activity  =Current activity: {0}
 gradebook.gridtitle.lesson.view  =Lesson View
-gradebook.gridtitle.learner.view  =Learner View
+gradebook.gridtitle.learner.view  =Grades by  learner
 label.select  =Select
 label.lessons.to.export  =lessons to export.
 label.button.export  =Export
@@ -97,8 +97,13 @@ label.max.mark  =Max mark
 label.actuals  =Actuals
 label.max  =Max
 label.overall.totals  =Overall totals
+audit.lesson.change.mark  =Changed mark for user {0}. LessonId: {1}. Old mark: {2}, new mark: {3}
+audit.activity.change.mark  =Changed mark for user {0}. LessonId: {1}. ActivityId:{2}. Old mark: {3}, new mark: {4}
+audit.marks.released.on  =Marks have been released for lessonId {0}.
+audit.marks.released.off  =Marks have been hidden for lessonId {0}.
+gradebook.export.login  =Username
 button.help  =Help
-button.help.tooltip  =Open help page
+button.help.tooltip  =Open help
 
 
-#======= End labels: Exported 91 labels for en AU =====
+#======= End labels: Exported 98 labels for en AU =====
